# taut.tk

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_callbacks.py  bench_overhead.py  bench_updates.py
docs/: README.md  context.md  control.md  reactive.md  resources.md  scheduling.md  stores.md  style.md  widgets.md
examples/: README.md  counter.py
examples/context_demo/: __init__.py  __main__.py  component.py
examples/context_typed/: __init__.py  __main__.py  component.py
examples/control_demo/: __init__.py  __main__.py  component.py
examples/counter/: __init__.py  __main__.py  component.py
examples/error_boundary_demo/: __init__.py  __main__.py  component.py
examples/layout_demo/: __init__.py  __main__.py  component.py  styles.py
examples/portal_demo/: __init__.py  __main__.py  component.py
examples/resource_demo/: __init__.py  __main__.py  component.py
examples/scheduler_demo/: __init__.py  __main__.py  component.py
examples/store_demo/: __init__.py  __main__.py  component.py
src/solid_tk/: __init__.py  component.py  context.py  control.py  layout.py  nodes.py  props.py  reactive.py  resource.py  runtime.py  scheduler.py  stores.py  style.py  tk.py  tk_props.py  ttk.py  widgets.py
src/taut/: component.py  (+12 more)
tests/: conftest.py  fakes.py  test_cli.py  test_components.py  test_context.py  test_control.py  test_portal.py  test_reactive.py  test_resources.py  test_scheduler.py  test_stores.py  test_style.py  test_widget_bindings.py  test_widget_namespaces.py  test_widgets.py
(+7 files in other folders)
