[project]
name = "solid-tk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sam I", email = "aweptimum@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "reaktiv>=0.22.0",
]

[project.scripts]
solid-tk = "solid_tk.cli:main"

[project.optional-dependencies]
dev = [
    "pillow>=12.2.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
